--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="/logo.jpg" alt="https://github.com/Pape-Djibril-Ndiaye/NQTB/blob/main/logo.jpg?raw=true">
+    <img src="/logo.jpg" alt="logo.jpg">
     <h1>QUANTUMBYTE</h1>
     <p>Petit mais révolutionnaire</p>
   </header>  <nav>
