--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <img src="https://avatars.githubusercontent.com/u/220437545?v=4" alt="mon log">
     <h1>QUANTUMBYTE</h1>
     <p>Petit mais révolutionnaire</p>
   </header>  <nav>
