--- a/index.html
+++ b/index.html
@@ -1,68 +1,127 @@
-<!DOCTYPE html><html lang="fr">
+<!DOCTYPE html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QUANTUMBYTE - Petit mais révolutionnaire</title>
+  <title>QUANTUMBYTE – Petit mais révolutionnaire</title>
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="main.js">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+  <!-- HEADER -->
   <header>
-    <img src="https://avatars.githubusercontent.com/u/220437545?v=4" alt="mon log">
+    <img src="https://avatars.githubusercontent.com/u/220437545?v=4" alt="Logo QUANTUMBYTE">
     <h1>QUANTUMBYTE</h1>
     <p>Petit mais révolutionnaire</p>
-  </header>  <nav>
+  </header>
+
+  <!-- NAVIGATION -->
+  <nav aria-label="Navigation principale">
     <a href="#accueil">Accueil</a>
     <a href="#apropos">À propos</a>
     <a href="#services">Services</a>
     <a href="#partenaires">Partenaires</a>
     <a href="#blog">Blog</a>
     <a href="#contact">Contact</a>
-  </nav>  <section id="accueil">
+  </nav>
+
+  <!-- ACCUEIL -->
+  <section id="accueil">
     <h2>Bienvenue chez QUANTUMBYTE</h2>
     <p>Nous construisons l'avenir avec la technologie, la robotique et l'intelligence agricole.</p>
     <button class="btn">Découvrir</button>
-  </section>  <section id="apropos">
+  </section>
+
+  <!-- À PROPOS -->
+  <section id="apropos">
     <h2>À propos</h2>
-    <p>QUANTUMBYTE est une entreprise jeune et ambitieuse dédiée à la technologie durable, la robotique agricole et la formation numérique. Nous croyons en un avenir vert et intelligent, accessible à tous. Notre vision est de combiner innovation et accessibilité pour transformer positivement les pratiques agricoles et l’éducation technique en Afrique.</p>
-  </section>  <section id="services">
+    <p>
+      QUANTUMBYTE est une entreprise jeune et ambitieuse dédiée à la technologie durable,
+      la robotique agricole et la formation numérique.  
+      Nous croyons en un avenir vert, intelligent et accessible à tous.
+    </p>
+  </section>
+
+  <!-- SERVICES -->
+  <section id="services">
     <h2>Nos Services</h2>
+
     <div class="services">
-      <div>
+      <article>
         <h3>Robotique Agricole</h3>
-        <p>Prototypes de machines intelligentes pour l’agriculture locale et durable. Nous construisons des solutions concrètes pour les fermes modernes.</p>
-      </div>
-      <div>
+        <p>Machines intelligentes pour une agriculture locale, moderne et durable.</p>
+      </article>
+
+      <article>
         <h3>Intelligence Artificielle</h3>
-        <p>Outils IA adaptés au monde rural et aux jeunes innovateurs. Automatisation, assistance intelligente et analyse des données agricoles.</p>
-      </div>
-      <div>
+        <p>Solutions IA pour l’automatisation et l’analyse des données agricoles.</p>
+      </article>
+
+      <article>
         <h3>Formations</h3>
-        <p>Ateliers et cours pratiques sur le web, la robotique, l’électronique, le design 3D et plus encore. Adapté aux jeunes et débutants.</p>
-      </div>
+        <p>Web, robotique, électronique, design 3D – adaptés aux jeunes et débutants.</p>
+      </article>
     </div>
-  </section>  <section id="partenaires">
+  </section>
+
+  <!-- PARTENAIRES -->
+  <section id="partenaires">
     <h2>Nos Partenaires</h2>
+
     <div class="partenaires">
-      <div><p>Écoles techniques</p></div>
-      <div><p>Fermes intelligentes</p></div>
-      <div><p>Startups locales</p></div>
+      <div>Écoles techniques</div>
+      <div>Fermes intelligentes</div>
+      <div>Startups locales</div>
     </div>
-  </section>  <section id="blog">
+  </section>
+
+  <!-- BLOG -->
+  <section id="blog">
     <h2>Blog & Actualités</h2>
-    <p>Bientôt disponible : Nos projets, nos réflexions, nos réussites. Suivez nos innovations et notre impact au quotidien.</p>
-  </section>  <section id="contact">
+    <p>Bientôt disponible : projets, innovations et impact de QUANTUMBYTE.</p>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact">
     <h2>Contact</h2>
+
     <form id="contact-form">
-      <label>Nom : <input type="text" id="nom" required></label>
-      <label>Email : <input type="email" id="email" required></label>
-      <label>Message :<textarea id="message" rows="5" required></textarea></label>
-      <button class="btn" type="submit">Envoyer</button>
+      <label>
+        Nom
+        <input type="text" name="nom" required>
+      </label>
+
+      <label>
+        Email
+        <input type="email" name="email" required>
+      </label>
+
+      <label>
+        Message
+        <textarea name="message" rows="5" required></textarea>
+      </label>
+
+      <button type="submit" class="btn">Envoyer</button>
     </form>
-    <a class="whatsapp" href="https://wa.me/221761408000" target="_blank">📱 Contacter via WhatsApp</a>
-  </section>  <footer>
-    <p>© QUANTUMBYTE 2025 – Petit mais révolutionnaire | Powered by Pape Djibril Ndiaye</p>
-  </footer>  
+
+    <a class="whatsapp" href="https://wa.me/221761408000" target="_blank" rel="noopener">
+      Contacter via WhatsApp
+    </a>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 QUANTUMBYTE – Petit mais révolutionnaire</p>
+    <p>Powered by Pape Djibril Ndiaye</p>
+  </footer>
+
+  <!-- JS -->
+  <script src="main.js"></script>
 </body>
 </html>
