--- a/index.html
+++ b/index.html
@@ -1,127 +1,122 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QUANTUMBYTE – Petit mais révolutionnaire</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QUANTUMBYTE – Agence technologique</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <img src="https://avatars.githubusercontent.com/u/220437545?v=4" alt="Logo QUANTUMBYTE">
-    <h1>QUANTUMBYTE</h1>
-    <p>Petit mais révolutionnaire</p>
-  </header>
+<header>
+  <img src="https://avatars.githubusercontent.com/u/220437545?v=4" alt="Logo QUANTUMBYTE">
+  <h1>QUANTUMBYTE</h1>
+  <p>Petit mais révolutionnaire</p>
+</header>
 
-  <!-- NAVIGATION -->
-  <nav aria-label="Navigation principale">
-    <a href="#accueil">Accueil</a>
-    <a href="#apropos">À propos</a>
-    <a href="#services">Services</a>
-    <a href="#partenaires">Partenaires</a>
-    <a href="#blog">Blog</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<nav>
+  <a href="#accueil">Accueil</a>
+  <a href="#apropos">À propos</a>
+  <a href="#services">Services</a>
+  <a href="#partenaires">Partenaires</a>
+  <a href="#blog">Blog</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <!-- ACCUEIL -->
-  <section id="accueil">
-    <h2>Bienvenue chez QUANTUMBYTE</h2>
-    <p>Nous construisons l'avenir avec la technologie, la robotique et l'intelligence agricole.</p>
-    <button class="btn">Découvrir</button>
-  </section>
+<!-- ACCUEIL -->
+<section id="accueil" class="hero">
+  <div class="hero-content">
+    <h2>Nous bâtissons l’avenir technologique</h2>
+    <p>Robotique • IA • Agriculture intelligente • Formation numérique</p>
+    <a href="#services" class="btn">Nos services</a>
+  </div>
+  <img src="https://images.unsplash.com/photo-1581091215366-0c1f6f4c5d69?auto=format&fit=crop&w=1400&q=80" alt="Robotique Agricole" class="hero-img">
+</section>
 
-  <!-- À PROPOS -->
-  <section id="apropos">
-    <h2>À propos</h2>
-    <p>
-      QUANTUMBYTE est une entreprise jeune et ambitieuse dédiée à la technologie durable,
-      la robotique agricole et la formation numérique.  
-      Nous croyons en un avenir vert, intelligent et accessible à tous.
-    </p>
-  </section>
-
-  <!-- SERVICES -->
-  <section id="services">
-    <h2>Nos Services</h2>
-
-    <div class="services">
-      <article>
-        <h3>Robotique Agricole</h3>
-        <p>Machines intelligentes pour une agriculture locale, moderne et durable.</p>
-      </article>
-
-      <article>
-        <h3>Intelligence Artificielle</h3>
-        <p>Solutions IA pour l’automatisation et l’analyse des données agricoles.</p>
-      </article>
-
-      <article>
-        <h3>Formations</h3>
-        <p>Web, robotique, électronique, design 3D – adaptés aux jeunes et débutants.</p>
-      </article>
+<!-- À PROPOS -->
+<section id="apropos">
+  <h2>À propos de QUANTUMBYTE</h2>
+  <div class="apropos-container">
+    <div class="apropos-text">
+      <p>
+        QUANTUMBYTE est une agence technologique innovante spécialisée dans la
+        robotique agricole, l’intelligence artificielle et la formation numérique.
+        Nous combinons innovation et durabilité pour transformer l’agriculture et l’éducation technique en Afrique.
+      </p>
+      <p>Notre mission : rendre la technologie accessible, efficace et durable.</p>
     </div>
-  </section>
-
-  <!-- PARTENAIRES -->
-  <section id="partenaires">
-    <h2>Nos Partenaires</h2>
-
-    <div class="partenaires">
-      <div>Écoles techniques</div>
-      <div>Fermes intelligentes</div>
-      <div>Startups locales</div>
+    <div class="apropos-img">
+      <img src="https://images.unsplash.com/photo-1617992675403-71c26fc2f979?auto=format&fit=crop&w=800&q=80" alt="Innovation Agricole">
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- BLOG -->
-  <section id="blog">
-    <h2>Blog & Actualités</h2>
-    <p>Bientôt disponible : projets, innovations et impact de QUANTUMBYTE.</p>
-  </section>
+<!-- SERVICES -->
+<section id="services">
+  <h2>Nos Services</h2>
+  <div class="services">
+    <div>
+      <img src="https://images.unsplash.com/photo-1619983089948-3f6785d8c287?auto=format&fit=crop&w=600&q=80" alt="Robot Agricole">
+      <h3>🤖 Robotique Agricole</h3>
+      <p>Machines intelligentes pour une agriculture locale et durable.</p>
+    </div>
+    <div>
+      <img src="https://images.unsplash.com/photo-1581092334693-d6f7d2b1bb9d?auto=format&fit=crop&w=600&q=80" alt="Intelligence Artificielle">
+      <h3>🧠 Intelligence Artificielle</h3>
+      <p>Outils IA pour automatisation, analyse et prise de décision intelligente.</p>
+    </div>
+    <div>
+      <img src="https://images.unsplash.com/photo-1626102390230-f55ebd18b0ec?auto=format&fit=crop&w=600&q=80" alt="Formation">
+      <h3>🎓 Formations</h3>
+      <p>Web, robotique, électronique, IA et design 3D pour jeunes et débutants.</p>
+    </div>
+  </div>
+</section>
 
-  <!-- CONTACT -->
-  <section id="contact">
-    <h2>Contact</h2>
+<!-- PARTENAIRES -->
+<section id="partenaires">
+  <h2>Nos Partenaires</h2>
+  <div class="partenaires">
+    <div>Écoles techniques</div>
+    <div>Fermes intelligentes</div>
+    <div>Startups locales</div>
+  </div>
+</section>
 
-    <form id="contact-form">
-      <label>
-        Nom
-        <input type="text" name="nom" required>
-      </label>
+<!-- BLOG -->
+<section id="blog">
+  <h2>Blog & Actualités</h2>
+  <p>Bientôt disponible : projets, innovations et impact de QUANTUMBYTE.</p>
+</section>
 
-      <label>
-        Email
-        <input type="email" name="email" required>
-      </label>
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Contactez-nous</h2>
+  <form id="contact-form">
+    <label>Nom
+      <input type="text" name="nom" required>
+    </label>
+    <label>Email
+      <input type="email" name="email" required>
+    </label>
+    <label>Message
+      <textarea name="message" rows="5" required></textarea>
+    </label>
+    <button type="submit" class="btn">Envoyer</button>
+  </form>
+  <a class="whatsapp" href="https://wa.me/221761408000" target="_blank">📱 WhatsApp direct</a>
+</section>
 
-      <label>
-        Message
-        <textarea name="message" rows="5" required></textarea>
-      </label>
+<footer>
+  <p>© 2025 QUANTUMBYTE – Petit mais révolutionnaire</p>
+  <p>Powered by Pape Djibril Ndiaye</p>
+</footer>
 
-      <button type="submit" class="btn">Envoyer</button>
-    </form>
-
-    <a class="whatsapp" href="https://wa.me/221761408000" target="_blank" rel="noopener">
-      Contacter via WhatsApp
-    </a>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2025 QUANTUMBYTE – Petit mais révolutionnaire</p>
-    <p>Powered by Pape Djibril Ndiaye</p>
-  </footer>
-
-  <!-- JS -->
-  <script src="main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
+
